--- a/vue-cli-demo/index.html
+++ b/vue-cli-demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>班级管理系统</title>
+    <title>会员管理系统</title>
   </head>
   <body>
     <div id="app"></div>
